syntax = "proto3";

package mizer;

service NodesApi {
  rpc GetNodes (NodesRequest) returns (Nodes) {}
  rpc AddNode (AddNodeRequest) returns (Node) {}
}

message AddNodeRequest {
  Node.NodeType type = 1;
  NodePosition position = 2;
}

message NodesRequest {}

message Nodes {
  repeated Node nodes = 1;
  repeated NodeConnection channels = 2;
}

message NodeConnection {
  string targetNode = 1;
  Port targetPort = 2;
  string sourceNode = 3;
  Port sourcePort = 4;
  ChannelProtocol protocol = 5;
}

message Node {
  enum NodeType {
    Fader = 0;
    DmxOutput = 1;
    Oscillator = 2;
    Clock = 3;
    OscInput = 4;
    VideoFile = 5;
    VideoOutput = 6;
    VideoEffect = 7;
    VideoColorBalance = 8;
    VideoTransform = 9;
    Script = 10;
    PixelToDmx = 11;
    PixelPattern = 12;
    OpcOutput = 13;
    Fixture = 14;
    Sequence = 15;
    MidiInput = 16;
    MidiOutput = 17;
    Laser = 18;
    IldaFile = 19;
  }

  NodeType type = 1;
  string path = 2;
  repeated Port inputs = 3;
  repeated Port outputs = 4;
  NodeDesigner designer = 5;
}

message NodePosition {
  double x = 1;
  double y = 2;
}

message NodeDesigner {
  NodePosition position = 1;
  double scale = 2;
}

enum ChannelProtocol {
    Single = 0;
    Multi = 1;
    Texture = 2;
    Vector = 3;
    Laser = 4;
    Poly = 5;
    Data = 6;
    Material = 7;
    Gst = 8;
}

message Port {
  string name = 1;
  ChannelProtocol protocol = 2;
}
